[gd_scene load_steps=3 format=3 uid="uid://cenjehmx7nrjx"]

[ext_resource type="Theme" uid="uid://cb2tqos08yhkd" path="res://interface/theme/MinimalUI/MinimalUI.tres" id="1_dsm3b"]
[ext_resource type="Script" path="res://interface/menus/main/settings/audio_tab.gd" id="2_ykrhr"]

[node name="Audio" type="TabBar"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_left = NodePath("../Video")
focus_neighbor_right = NodePath("../API")
focus_neighbor_bottom = NodePath("HBoxContainer/VBoxContainer2/MasterVolumeSlider")
theme = ExtResource("1_dsm3b")
theme_override_font_sizes/font_size = 20
script = ExtResource("2_ykrhr")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.0
offset_top = -91.0
offset_right = 157.0
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Master" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
focus_mode = 1
theme_override_font_sizes/font_size = 24
text = "Master
"

[node name="Music" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
focus_mode = 1
theme_override_font_sizes/font_size = 24
text = "Music"

[node name="SoundEffects" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
focus_mode = 1
theme_override_font_sizes/font_size = 24
text = "Sound Effects"

[node name="VoiceEffects" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
focus_mode = 1
theme_override_font_sizes/font_size = 24
text = "Voice"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="MasterVolumeSlider" type="HSlider" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
focus_neighbor_top = NodePath("../../..")
focus_neighbor_bottom = NodePath("../MusicVolumeSlider")
max_value = 1.0
step = 0.05

[node name="MusicVolumeSlider" type="HSlider" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
focus_neighbor_top = NodePath("../MasterVolumeSlider")
focus_neighbor_bottom = NodePath("../SoundVolumeSlider")
max_value = 1.0
step = 0.05

[node name="SoundVolumeSlider" type="HSlider" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
focus_neighbor_top = NodePath("../MusicVolumeSlider")
max_value = 1.0
step = 0.05

[node name="VoiceVolumeSlider" type="HSlider" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
focus_neighbor_top = NodePath("../MusicVolumeSlider")
max_value = 1.0
step = 0.05
